--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "start": "node zeeone.js"
-   },
+  },
   "keywords": [
     "whatsapp",
     "2021",
@@ -15,15 +15,14 @@
     "baileys-md"
   ],
   "author": "ZeeoneOfc",
-  "license": "MIT",
   "dependencies": {
     "@adiwajshing/baileys": "^4.4.0",
     "@adiwajshing/keyed-db": "^0.2.4",
     "@bochilteam/scraper": "^2.0.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@vitalets/google-translate-api": "^7.0.0",
-    "awesome-phonenumber": "^2.64.0",
     "amethyste-api": "^1.1.5",
+    "awesome-phonenumber": "^2.64.0",
     "axios": "^0.24.0",
     "cfonts": "^2.10.0",
     "chalk": "^4.1.2",
@@ -42,13 +41,13 @@
     "got": "^11.8.3",
     "human-readable": "^0.2.1",
     "hxz-api": "^1.0.1",
-    "instatouch":"^2.3.14",
+    "instatouch": "^2.3.14",
     "jimp": "^0.16.1",
     "jsdom": "^18.1.1",
     "lodash": "^0.1.0",
     "lowdb": "^2.1.0",
-    "mongoose": "^6.2.1",
     "moment-timezone": "^0.5.34",
+    "mongoose": "^6.2.1",
     "ms": "^2.1.3",
     "node-cron": "^3.0.0",
     "node-fetch": "^2.6.4",
@@ -57,6 +56,7 @@
     "path": "^0.12.7",
     "perf_hooks": "0.0.1",
     "pino": "^7.2.0",
+    "qrcode": "^1.5.1",
     "qrcode-terminal": "^0.12.0",
     "request": "^2.88.2",
     "scrape-primbon": "^1.1.0",
