--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@adiwajshing/keyed-db": "^0.2.4",
     "@bochilteam/scraper": "^2.0.0",
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@hapi/boom": "^10.0.0",
     "@vitalets/google-translate-api": "^7.0.0",
     "amethyste-api": "^1.1.5",
     "awesome-phonenumber": "^2.64.0",
@@ -28,6 +29,7 @@
     "chalk": "^4.1.2",
     "cheerio": "^1.0.0-rc.10",
     "child_process": "^1.0.2",
+    "crypto-random-string": "^5.0.0",
     "emoji-api": "^2.0.1",
     "express": "^4.18.1",
     "fetch": "^1.1.0",
@@ -55,12 +57,14 @@
     "os": "^0.1.2",
     "path": "^0.12.7",
     "perf_hooks": "0.0.1",
+    "performance-now": "^2.1.0",
     "pino": "^7.2.0",
     "qrcode": "^1.5.1",
     "qrcode-terminal": "^0.12.0",
     "request": "^2.88.2",
     "scrape-primbon": "^1.1.0",
     "similarity": "^1.2.1",
+    "steno": "^3.0.0",
     "util": "^0.12.4",
     "xfarr-api": "^1.0.2",
     "yargs": "^17.2.1"
